--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,126 @@
+@import url("./normalize.css");
+
+/**variables globales*/
+:root {
+  /**convierte 1rem en base 10*/
+  --over-font-size: 62.5%;
+
+  /** colores base*/
+}
+
+html {
+  font-size: var(--over-font-size);
+}
+
+html,
 body {
-    background-color: aqua;}
+  margin: 0;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+.container {
+  border: 1px dotted blue;
+  box-sizing: border-box;
+  /**hace que los bordes queden internos al elemento*/
+  margin: 0 auto;
+  /**centra el elemento*/
+  max-width: 96vw;
+  /**ancho maximo*/
+  padding: 0 .8rem;
+  /** Distancia entre el contenido y el borde */
+}
+
+.container-fluid {
+  border: 1px solid orangered;
+  box-sizing: border-box;
+  margin: 0 auto;
+  max-width: 100vw;
+}
+
+/**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+
+/** Media Queries (break point)*/
+@media (width > 567px) {
+     .container {
+    max-width: 54rem;
+    padding: 0 1.6rem;
+  }
+
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
+
+@media (width > 768px) {
+    .container {
+    max-width: 72rem;
+    padding: 0 2.4rem;
+  }
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
+
+@media (width > 1024px) {
+     .container {
+    max-width: 99.2rem;
+    padding: 0 4rem;
+  }
+/**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+
+}
+
+@media (width > 1200px) {
+     .container {
+    max-width: 99.2rem;
+    padding: 0 4rem;
+  }
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
+
+@media (width > 1400px) {
+     .container {
+    max-width: 132rem;
+    padding: 0 4.8rem;
+  }
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
+
+@media (width > 1600px) {
+     .container {
+    max-width: 144rem;
+    padding: 0 5.4rem;
+  }
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
+
+@media (width > 1920px) {
+     .container {
+    max-width: 160rem;
+    padding: 0 6.4rem;
+  }
+  /**Header*/
+/**Main*/
+/**Aside*/
+/**Footer*/
+}
