--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,17 @@ html {
 
 html,
 body {
+  height: 100%;
   margin: 0;
 }
 
 body {
   font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
 }
+
+
 
 .container {
   border: 1px dotted blue;
@@ -38,6 +43,11 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 100vw;
+}
+
+.main {
+  /* display: block; */
+  flex: 1; /**flex: 1 0 auto*/
 }
 
 /**Header*/
