--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("./normalize.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /**variables globales*/
 :root {
@@ -24,7 +25,38 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  line-height: 1.6;
+}
 
+h1,
+h2 {
+  font-size: 3.2rem;
+}
+
+
+/* ul.menu-main {
+  display: none;
+} */
+
+/*HEADER*/
+
+.header {
+  border: 1px dotted red;
+}
+
+.header-top {
+    align-items: baseline;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header_tittle {
+  text-align: center;
+  font-size: 4rem;
+  margin: 10px 0;
+  font-family: "Poppins", sans-serif;  
+}
 
 .container {
   border: 1px dotted blue;
@@ -43,6 +75,21 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 100vw;
+}
+
+ul.menu-main {
+  display: none;
+}
+
+.nav-navbar {
+  align-items: center;
+  display: flex;
+  height: 4.4rem;
+  justify-content: center;
+}
+
+.menu__item {
+ font-size: 2rem;
 }
 
 .main {
@@ -73,6 +120,27 @@ body {
     max-width: 72rem;
     padding: 0 2.4rem;
   }
+  
+  .menu-main {
+    align-items: center;
+    display: flex;
+    gap: .5rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+   }
+
+   ul.menu-main {
+    display: flex;
+    gap: 20rem;
+    list-style: none;
+    margin: 0;
+    }
+
+    .box-buttons {
+    display: flex;
+    gap: 1rem;
+}
   /**Header*/
 /**Main*/
 /**Aside*/
