--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,9 @@ body {
   /**ancho maximo*/
   padding: 0 .8rem;
   /** Distancia entre el contenido y el borde */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container-fluid {
@@ -53,7 +56,32 @@ body {
 /**Header*/
 /**Main*/
 /**Aside*/
+
+
 /**Footer*/
+
+.horario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container.container-redes-sociales-images {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.redes-sociales-images {
+    display: flex;
+    gap: 1rem;
+    margin: 1rem 0;
+    max-height: 2rem;
+    height: 100%;
+    max-width: 2rem;
+    width: 100%;
+}
+
+
 
 /** Media Queries (break point)*/
 @media (width > 567px) {
