--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,18 @@ h2 {
     align-items: baseline;
     display: flex;
     justify-content: space-between;
+    padding: 3rem;
+}
+
+.header-top-left {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.header-top-left img {
+    max-width: 5rem;
+    height: auto;
 }
 
 .header_tittle {
@@ -58,13 +70,14 @@ h2 {
   font-family: "Poppins", sans-serif;  
 }
 
+
 .container {
   border: 1px dotted blue;
   box-sizing: border-box;
   /**hace que los bordes queden internos al elemento*/
   margin: 0 auto;
   /**centra el elemento*/
-  max-width: 96vw;
+  max-width: 100%;
   /**ancho maximo*/
   padding: 0 .8rem;
   /** Distancia entre el contenido y el borde */
@@ -74,7 +87,7 @@ h2 {
   border: 1px solid orangered;
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 ul.menu-main {
@@ -117,7 +130,7 @@ ul.menu-main {
 
 @media (width > 768px) {
     .container {
-    max-width: 72rem;
+    max-width: 100%;
     padding: 0 2.4rem;
   }
   
@@ -132,7 +145,7 @@ ul.menu-main {
 
    ul.menu-main {
     display: flex;
-    gap: 20rem;
+    gap: 12rem;
     list-style: none;
     margin: 0;
     }
@@ -149,7 +162,7 @@ ul.menu-main {
 
 @media (width > 1024px) {
      .container {
-    max-width: 99.2rem;
+    max-width: 100%;
     padding: 0 4rem;
   }
 /**Header*/
@@ -161,7 +174,7 @@ ul.menu-main {
 
 @media (width > 1200px) {
      .container {
-    max-width: 99.2rem;
+    max-width: 100%;
     padding: 0 4rem;
   }
   /**Header*/
@@ -172,7 +185,7 @@ ul.menu-main {
 
 @media (width > 1400px) {
      .container {
-    max-width: 132rem;
+    max-width: 100%;
     padding: 0 4.8rem;
   }
   /**Header*/
