--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
 @import url("./normalize.css");
+@import url('https://fonts.googleapis.com/css2?family=Alice&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 
 /**variables globales*/
 :root {
@@ -10,6 +12,7 @@
 
 html {
   font-size: var(--over-font-size);
+  font-size: 14px;
 }
 
 html,
@@ -19,9 +22,32 @@ body {
 }
 
 body {
-  font-size: 1.6rem;
   display: flex;
   flex-direction: column;
+  margin: 0%;
+  font-family: "Poppins", sans-serif;
+}
+
+h3 {
+  font-size: 12px
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  /* también elimina la sangría */
+  display: flex;
+  flex-direction: column;
+  row-gap: .5rem;
+}
+
+li {
+  margin-bottom: 6px;
 }
 
 
@@ -32,10 +58,8 @@ body {
   /**hace que los bordes queden internos al elemento*/
   margin: 0 auto;
   /**centra el elemento*/
-  max-width: 96vw;
+  max-width: 100%;
   /**ancho maximo*/
-  padding: 0 .8rem;
-  /** Distancia entre el contenido y el borde */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,8 +73,7 @@ body {
 }
 
 .main {
-  /* display: block; */
-  flex: 1; /**flex: 1 0 auto*/
+  flex: 1;
 }
 
 /**Header*/
@@ -60,105 +83,175 @@ body {
 
 /**Footer*/
 
-.horario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+section,
+footer {
+  width: 100%;
+  margin: 0;
 }
-.container.container-redes-sociales-images {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+
+.container-footer {
+  padding: 40px 10px;
+}
+
+.horario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.texto {
+  text-align: center;
+}
+
+.texto p {
+  margin: 0;
+}
+
+input[type="email"] {
+
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  vertical-align: top;
+  box-sizing: border-box;
+  cursor: pointer;
+  line-height: 24px;
+}
+
+button[type=submit] {
+  font-family: Poppins, sans-serif;
+  font-size: 12px;
+  padding: 10px 43px;
+  color: #fff;
+  background-color: #141414;
+  border: 1px solid transparent;
+}
+
+
+form.email-input {
+  display: inline-flex;
+  padding: 2rem 0 .5rem 0;
+}
+
+
+.container-redes-sociales-images {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .redes-sociales-images {
-    display: flex;
-    gap: 1rem;
-    margin: 1rem 0;
-    max-height: 2rem;
-    height: 100%;
-    max-width: 2rem;
-    width: 100%;
+  display: flex;
+  padding: 1rem;
+  max-height: 1rem;
+  max-width: 2rem;
 }
 
 
+.footer_container--bottom {
+  display: inline-block;
+  width: 100%;
+  background-color: #cecbc7;
+  padding: 3rem;
+  grid-gap: 1rem;
+}
+
+.metodo_de_pago {
+  width: 206px;
+  height: 21px;
+}
 
 /** Media Queries (break point)*/
 @media (width > 567px) {
-     .container {
+  .container {
     max-width: 54rem;
-    padding: 0 1.6rem;
+    /* padding: 0 1.6rem; */
   }
 
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
 
 @media (width > 768px) {
-    .container {
+  .container {
     max-width: 72rem;
-    padding: 0 2.4rem;
+    /* padding: 0 2.4rem; */
   }
+
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
 
 @media (width > 1024px) {
-     .container {
+  .container {
     max-width: 99.2rem;
-    padding: 0 4rem;
+    /* padding: 0 4rem;*/
   }
-/**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+
+  .container-footer{
+    height: auto;
+    margin: unset;
+  }
+  .footer_container.footer_container--top {
+    display: flex;
+    align-items: center;
+  }
+
+  /**Header*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 
 }
 
 @media (width > 1200px) {
-     .container {
+  .container {
     max-width: 99.2rem;
-    padding: 0 4rem;
+    /* padding: 0 4rem;*/
   }
+
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
 
 @media (width > 1400px) {
-     .container {
+  .container {
     max-width: 132rem;
-    padding: 0 4.8rem;
+    /* padding: 0 4.8rem; */
   }
+
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
 
 @media (width > 1600px) {
-     .container {
+  .container {
     max-width: 144rem;
-    padding: 0 5.4rem;
+    /* padding: 0 5.4rem; */
   }
+
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
 
 @media (width > 1920px) {
-     .container {
+  .container {
     max-width: 160rem;
-    padding: 0 6.4rem;
+    /* padding: 0 6.4rem; */
   }
+
   /**Header*/
-/**Main*/
-/**Aside*/
-/**Footer*/
+  /**Main*/
+  /**Aside*/
+  /**Footer*/
 }
